# alpha-compass

./: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
docs/: CLAUDE_CODE_キックオフ.md  v1リリースサマリ.md  アーキテクチャ設計書.md  セッションプラン.md  要件定義書.md  進捗ログ.md
sidecar/: README.md  build_sidecar.bat  pyproject.toml  server.py
sidecar/app/: __init__.py  main.py
sidecar/app/adapters/: __init__.py  _daily.py  calendar.py  cot.py  edinet.py  fred.py  fx.py  jquants.py  news.py  tdnet.py  yfinance.py
sidecar/app/ai/: __init__.py  claude.py  local_qwen.py  router.py  rules.py
sidecar/app/normalize/: __init__.py
sidecar/app/schemas/: __init__.py  common.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: creds.rs  lib.rs  main.rs  util.rs
src-tauri/src/alerts/: eval.rs  mod.rs
src-tauri/src/engine/: composite.rs  cross.rs  mod.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/sidecar/: mod.rs
src-tauri/src/store/: mod.rs  models.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: .gitkeep  AiStatusChip.tsx  Freshness.tsx
src/lib/: format.ts  ipc.ts
src/views/: AlertsView.tsx  ConnectionView.tsx  CrossMarketView.tsx  DisclosuresView.tsx  HomeView.tsx  JapanMarketView.tsx  SettingsView.tsx  UsMarketView.tsx
